# Programmieruebung-2.1

./: README.md  power_curve.py  pyproject.toml  sort.py
